<resources>
    <string name="app_name">RelifeAssignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="article_fragment_label">Article Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="login_now">Login Now.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_you_email_id">Enter You Email Id</string>
    <string name="register_now">Register Now.</string>
    <string name="or">---OR---</string>
    <string name="if_already_signup">If already SignUp.</string>
    <string name="registration">Registration</string>
</resources>